[tool.poetry]
name = "liquidata"
version = "0.1.2"
description = "EDSL for data pipelines in Python"
authors = ["Jacek Generowicz <github@my-post-office.net>"]
license = "MIT"
repository    = "https://github.com/jacg/liquidata"
documentation = "https://jacg.github.io/liquidata/"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
hypothesis = "^5.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
